--- a/PlayFiles/PlayFiles.csproj
+++ b/PlayFiles/PlayFiles.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ConfirmFile.xaml.cs">
       <DependentUpon>ConfirmFile.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Logic\FileButton.cs" />
     <Compile Include="Logic\FileInfo.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
